Date issue and New Alignments

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1619,6 +1619,7 @@ ul {
 }
 .header-main-menu .navbar-nav .navbar-item {
   margin-right: 20px;
+  line-height: 0;
 }
 @media only screen and (max-width: 767px) {
   .header-main-menu .navbar-nav .navbar-item {
@@ -6217,7 +6218,7 @@ pre {
  
  .btn-toolbar .btn-group a {
     border: 0px !important;
-    color: #be9c52;
+    color: #c01a6c;
     background: #000;
     font-weight: bold;
     padding: 10px 20px;
